<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/topText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:id="@+id/topCirle"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/topText">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/totalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="65sp"
                        android:fontFamily="sans-serif-light"
                        android:lines="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/euro"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginLeft="7dp"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="100"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:progress="100"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/bottomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_amount"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/topCirle"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:id="@+id/bottomCircle"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/bottomText"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/realAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:fontFamily="sans-serif-light"
                        android:lines="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/euro"
                        android:textSize="13sp"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="100"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:progress="100"/>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="@dimen/round_button_diameter"
                android:layout_height="@dimen/round_button_diameter"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/add_button_margin"
                android:padding="@dimen/add_button_padding"
                android:src="@drawable/ic_add_white_48dp"
                android:tint="@android:color/white"
                android:background="@drawable/oval"
                android:elevation="4dp"/>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
